--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
   <link rel="icon" type="image/png" sizes="32x32" href="./images/favicon-32x32.png">
   <script src="https://kit.fontawesome.com/9126a3f84a.js" crossorigin="anonymous"></script>
   <link rel="stylesheet" href="css/style.css">
-  <title>Frontend Mentor | Clipboard landing page</title>
+  <title>Colorismo Ambiental</title>
 </head>
 
 <body>
